# docs/swagger.json
@@ -13,34 +13,6 @@
     "host": "localhost:1323",
     "basePath": "/v1",
     "paths": {
-        "/": {
-            "get": {
-                "description": "Example endpoint that return greeting",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Example"
-                ],
-                "summary": "Greeting",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Name for greeting",
-                        "name": "name",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/auth/confirm": {
             "post": {
                 "description": "SMS認証チェック",
@@ -386,6 +358,52 @@
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/error_handler.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/healthz": {
+            "get": {
+                "description": "check if application is living",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Health Check"
+                ],
+                "summary": "Check Liveness",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/readyz": {
+            "get": {
+                "description": "check if application and the depending services are functioning",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Health Check"
+                ],
+                "summary": "Check Readiness",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "ping db failed: invalid connection",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
